# cross-corr-jpdc

./: .gitignore  CMakeLists.txt  README.md
benchmarking/: README.md  benchmark.py  benchmarking.py  input_generator.py  pyproject.toml  validation.py
benchmarking/args_test/: .gitignore  args_test.yml  args_test2.yml  args_test3.yml
benchmarking/example/: benchmark.yml
benchmarking/jpdc/: benchmark.yml
benchmarking/text/: .gitignore  block_per_shift.yml  fft.yml  fft_small.yml  fft_speedup_compute_resolution.yml  fft_speedup_compute_resolution2.yml  fft_speedup_compute_startup_resolution.yml  local_mem.yml  matlab_speedup.yml  matlab_startup_speedup.yml  scipy_speedup.yml  warp_per_shift_optimizations_speedup.yml  warp_shuffle_optimalizations.yml  warp_shuffle_optimizations_speedup.yml
benchmarking/text/WarpShuffleOptimalizations/0_multirow/: 0-0-no_optimalization____-16_16_1_1-time.csv  0-1-no_optimalization____-32_32_1_1-time.csv  0-2-no_optimalization____-64_64_1_1-time.csv  0-3-no_optimalization____-128_128_1_1-time.csv  0-4-no_optimalization____-256_256_1_1-time.csv  0-5-no_optimalization____-512_512_1_1-time.csv  1-0-multirow__2__-16_16_1_1-time.csv  1-0-multirow__4__-16_16_1_1-time.csv  1-0-multirow__6__-16_16_1_1-time.csv  1-0-multirow__8__-16_16_1_1-time.csv  1-1-multirow__2__-32_32_1_1-time.csv  1-1-multirow__4__-32_32_1_1-time.csv  1-1-multirow__6__-32_32_1_1-time.csv  1-1-multirow__8__-32_32_1_1-time.csv  1-2-multirow__2__-64_64_1_1-time.csv  1-2-multirow__4__-64_64_1_1-time.csv  1-2-multirow__6__-64_64_1_1-time.csv  1-2-multirow__8__-64_64_1_1-time.csv  1-3-multirow__2__-128_128_1_1-time.csv  1-3-multirow__4__-128_128_1_1-time.csv  1-3-multirow__6__-128_128_1_1-time.csv  1-3-multirow__8__-128_128_1_1-time.csv  1-4-multirow__2__-256_256_1_1-time.csv  1-4-multirow__4__-256_256_1_1-time.csv  1-4-multirow__6__-256_256_1_1-time.csv  1-4-multirow__8__-256_256_1_1-time.csv  1-5-multirow__2__-512_512_1_1-time.csv  1-5-multirow__4__-512_512_1_1-time.csv  1-5-multirow__6__-512_512_1_1-time.csv  1-5-multirow__8__-512_512_1_1-time.csv  group_definition.yml
benchmarking/text/WarpShuffleOptimalizations/1_multiple_rights/: 0-0-no_optimalization____-16_16_1_2-time.csv  0-1-no_optimalization____-32_32_1_2-time.csv  0-10-no_optimalization____-256_256_1_4-time.csv  0-11-no_optimalization____-512_512_1_4-time.csv  0-12-no_optimalization____-16_16_1_8-time.csv  0-13-no_optimalization____-32_32_1_8-time.csv  0-14-no_optimalization____-64_64_1_8-time.csv  0-15-no_optimalization____-128_128_1_8-time.csv  0-16-no_optimalization____-256_256_1_8-time.csv  0-17-no_optimalization____-512_512_1_8-time.csv  0-18-no_optimalization____-16_16_1_16-time.csv  0-19-no_optimalization____-32_32_1_16-time.csv  0-2-no_optimalization____-64_64_1_2-time.csv  0-20-no_optimalization____-64_64_1_16-time.csv  0-21-no_optimalization____-128_128_1_16-time.csv  0-22-no_optimalization____-256_256_1_16-time.csv  0-23-no_optimalization____-512_512_1_16-time.csv  0-3-no_optimalization____-128_128_1_2-time.csv  0-4-no_optimalization____-256_256_1_2-time.csv  0-5-no_optimalization____-512_512_1_2-time.csv  0-6-no_optimalization____-16_16_1_4-time.csv  0-7-no_optimalization____-32_32_1_4-time.csv  0-8-no_optimalization____-64_64_1_4-time.csv  0-9-no_optimalization____-128_128_1_4-time.csv  1-0-multiple_rights__2__-16_16_1_2-time.csv  1-0-multiple_rights__4__-16_16_1_2-time.csv  1-0-multiple_rights__6__-16_16_1_2-time.csv  1-0-multiple_rights__8__-16_16_1_2-time.csv  1-1-multiple_rights__2__-32_32_1_2-time.csv  1-1-multiple_rights__4__-32_32_1_2-time.csv  1-1-multiple_rights__6__-32_32_1_2-time.csv  1-1-multiple_rights__8__-32_32_1_2-time.csv  1-10-multiple_rights__2__-256_256_1_4-time.csv  1-10-multiple_rights__4__-256_256_1_4-time.csv  1-10-multiple_rights__6__-256_256_1_4-time.csv  1-10-multiple_rights__8__-256_256_1_4-time.csv  1-11-multiple_rights__2__-512_512_1_4-time.csv  1-11-multiple_rights__4__-512_512_1_4-time.csv  1-11-multiple_rights__6__-512_512_1_4-time.csv  1-11-multiple_rights__8__-512_512_1_4-time.csv  (+81 more)
benchmarking/validation/: validation.yml
cmake/: superbuild.cmake
data/: README.md  ina_10_10_1_1.csv  ina_10_10_1_2.csv  ina_10_10_2_1.csv  ina_10_10_4_1.csv  ina_10_10_4_2.csv  ina_128_128_1_1.csv  ina_128_128_1_2.csv  ina_128_128_2_1.csv  ina_128_128_4_1.csv  ina_256_256_1_1.csv  ina_256_256_1_2.csv  ina_256_256_2_1.csv  ina_64_64_1_1.csv  ina_64_64_1_2.csv  ina_64_64_2_1.csv  ina_64_64_4_1.csv  ina_64_64_4_2.csv  valid_n_to_m_10_10_2_4_1_1.csv  valid_n_to_m_10_10_4_4_1_1.csv  valid_n_to_m_64_64_4_2_1_1.csv  valid_n_to_m_64_64_4_4_1_2.csv  valid_n_to_mn_10_10_2_4_1_1.csv  valid_n_to_mn_128_128_2_4_1_1.csv  valid_one_to_many_10_10_1_2_1_1.csv  valid_one_to_many_10_10_1_4_1_1.csv  valid_one_to_many_64_64_1_2_1_1.csv  valid_one_to_one_10_10_1_1_1_2.csv  (+2 more)
existing/python/: benchmark.sh  compute_valid_results.sh  crosscorr.py  matrix.py  pyproject.toml
input_generator/: input_generator.py  pyproject.toml
sample_app/: CMakeLists.txt  README.md
sample_app/src/: bound_checked_loads.cuh  cuda_helpers.cuh  host_helpers.hpp  kernel_args.cpp  kernel_args.hpp  kernels.cuh  main.cpp  matrix.hpp  naive_shuffle_one_to_many_multirow_both_multimat_right.cu  row_distribution.cpp  row_distribution.cuh  shared_mem.cuh  types.cuh  warp_size.hpp
visualization/: README.md  block_per_shift.ipynb  cpu.ipynb  definition_based_speedup_warp_shuffle.ipynb  example_benchmark.ipynb  existing.ipynb  fft.ipynb  fft_speedup.ipynb  fft_speedup2.ipynb  fft_speedup_startup.ipynb  gpulab_args0.ipynb  gpulab_args1.ipynb  gpulab_args2.ipynb  gpulab_args3.ipynb  local_mem.ipynb  matlab_speedup.ipynb  matlab_startup_speedup.ipynb  preprocess-all.sh  preprocess-with-charlie.sh  preprocess.py  pyproject.toml  scipy_speedup.ipynb  shared.py  simplified_indexing.ipynb  singlevsdouble.ipynb  text_diagrams.ipynb  total_times.py  warp_per_shift.ipynb  warp_per_shift_args.ipynb  warp_per_shift_comparison.ipynb  warp_per_shift_optimizations.ipynb  warp_per_shift_optimizations2.ipynb  warp_shuffle.ipynb  warp_shuffle_optimizations.ipynb
(+80 files in other folders)
