[tool.poetry]
name = "input_generator"
version = "0.1.0"
description = "Tool for generating random matrices and writing them out into a different file formats"
authors = ["Karel Madera <karelmad@email.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pylint = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
